--- a/envoy.yaml
+++ b/envoy.yaml
@@ -32,7 +32,8 @@ static_resources:
                   request_handle:logInfo("Hello World.")
                 end
           - name: envoy.filters.http.router
-            typed_config: {}
+            typed_config:
+             "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
 
   clusters:
   - name: web_service
